Critical bug fix on .spacing

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -2256,8 +2256,8 @@ body {
   margin-top: 1.5rem;
   margin-bottom: 18px;
   margin-bottom: 1.125rem;
-  padding: 32px;
-  padding: 2rem;
+  padding: 32px 32px 0px 32px;
+  padding: 2rem 2rem 0rem 2rem;
 }
 ul.navbar-nav li {
   font-size: 1rem;
@@ -3512,8 +3512,8 @@ input[type=button] {
   font-weight: bold;
   padding: 12px 16px 12px 16px;
   padding: 0.75rem 1rem 0.75rem 1rem;
-  margin: 8px;
-  margin: 0.5rem;
+  margin: 8px 8px 8px 0px;
+  margin: 0.5rem 0.5rem 0.5rem 0rem;
 }
 .btn:hover,
 .button:hover,
@@ -3564,8 +3564,8 @@ input[type=button]:focus {
   font-weight: bold;
   padding: 12px 16px 12px 16px;
   padding: 0.75rem 1rem 0.75rem 1rem;
-  margin: 8px;
-  margin: 0.5rem;
+  margin: 8px 8px 8px 0px;
+  margin: 0.5rem 0.5rem 0.5rem 0rem;
 }
 .btn-primary-light:hover,
 .btn-primary-light:focus,
@@ -3588,8 +3588,8 @@ input[type=button]:focus {
   font-weight: bold;
   padding: 12px 16px 12px 16px;
   padding: 0.75rem 1rem 0.75rem 1rem;
-  margin: 8px;
-  margin: 0.5rem;
+  margin: 8px 8px 8px 0px;
+  margin: 0.5rem 0.5rem 0.5rem 0rem;
 }
 .btn-secondary:hover,
 .btn-secondary:focus,
@@ -3619,8 +3619,8 @@ input[type=button]:focus {
   font-weight: bold;
   padding: 12px 16px 12px 16px;
   padding: 0.75rem 1rem 0.75rem 1rem;
-  margin: 8px;
-  margin: 0.5rem;
+  margin: 8px 8px 8px 0px;
+  margin: 0.5rem 0.5rem 0.5rem 0rem;
 }
 .btn-disabled:hover,
 .button--grey:hover,
@@ -3647,8 +3647,8 @@ input[type=button]:focus {
   font-weight: bold;
   padding: 12px 16px 12px 16px;
   padding: 0.75rem 1rem 0.75rem 1rem;
-  margin: 8px;
-  margin: 0.5rem;
+  margin: 8px 8px 8px 0px;
+  margin: 0.5rem 0.5rem 0.5rem 0rem;
 }
 .btn-warning:hover,
 .btn-warning:focus,
@@ -3672,8 +3672,8 @@ input[type=button]:focus {
   font-weight: bold;
   padding: 12px 16px 12px 16px;
   padding: 0.75rem 1rem 0.75rem 1rem;
-  margin: 8px;
-  margin: 0.5rem;
+  margin: 8px 8px 8px 0px;
+  margin: 0.5rem 0.5rem 0.5rem 0rem;
 }
 .btn-success:hover,
 .button--green:hover,
@@ -4310,8 +4310,8 @@ input[class*="dob-"] {
   font-weight: bold;
   padding: 12px 16px 12px 16px;
   padding: 0.75rem 1rem 0.75rem 1rem;
-  margin: 8px;
-  margin: 0.5rem;
+  margin: 8px 8px 8px 0px;
+  margin: 0.5rem 0.5rem 0.5rem 0rem;
   padding: 0;
 }
 .field-group--dropdown .dropdown:hover,
@@ -10696,8 +10696,8 @@ input.tablesort-filter {
 }
 @media (max-width: 839px) {
   .section-notice__content {
-    padding: 16px;
-    padding: 1rem;
+    padding: 16px 16px 0px 16px;
+    padding: 1rem 1rem 0rem 1rem;
   }
   .section-notice__content p {
     font-size: 0.875rem;
@@ -10809,8 +10809,8 @@ input.tablesort-filter {
 .index-page__box > h2,
 .home-page__box > h2,
 .index-box > h2 {
-  margin: 0px;
-  margin: 0rem;
+  margin: 0px 0px 11.2px 0px;
+  margin: 0rem 0rem 0.7rem 0rem;
   font-size: 1.3rem;
   color: #004B88;
 }
@@ -10823,8 +10823,8 @@ input.tablesort-filter {
 .index-page__box > h3,
 .home-page__box > h3,
 .index-box > h3 {
-  margin: 0px;
-  margin: 0rem;
+  margin: 0px 0px 11.2px 0px;
+  margin: 0rem 0rem 0.7rem 0rem;
   font-size: 1rem;
   color: #191926;
 }
@@ -10841,8 +10841,8 @@ input.tablesort-filter {
 }
 .index-page__box--green > h2,
 .index-box__green > h2 {
-  margin: 0px;
-  margin: 0rem;
+  margin: 0px 0px 11.2px 0px;
+  margin: 0rem 0rem 0.7rem 0rem;
   font-size: 1.3rem;
   color: #004B88;
 }
@@ -10853,8 +10853,8 @@ input.tablesort-filter {
 }
 .index-page__box--green > h3,
 .index-box__green > h3 {
-  margin: 0px;
-  margin: 0rem;
+  margin: 0px 0px 11.2px 0px;
+  margin: 0rem 0rem 0.7rem 0rem;
   font-size: 1rem;
   color: #191926;
 }
@@ -10871,8 +10871,8 @@ input.tablesort-filter {
 }
 .index-page__box--purple > h2,
 .index-box__purple > h2 {
-  margin: 0px;
-  margin: 0rem;
+  margin: 0px 0px 11.2px 0px;
+  margin: 0rem 0rem 0.7rem 0rem;
   font-size: 1.3rem;
   color: #004B88;
 }
@@ -10883,8 +10883,8 @@ input.tablesort-filter {
 }
 .index-page__box--purple > h3,
 .index-box__purple > h3 {
-  margin: 0px;
-  margin: 0rem;
+  margin: 0px 0px 11.2px 0px;
+  margin: 0rem 0rem 0.7rem 0rem;
   font-size: 1rem;
   color: #191926;
 }
@@ -10899,8 +10899,8 @@ input.tablesort-filter {
   display: block;
 }
 .index-box__info > h2 {
-  margin: 0px;
-  margin: 0rem;
+  margin: 0px 0px 11.2px 0px;
+  margin: 0rem 0rem 0.7rem 0rem;
   font-size: 1.3rem;
   color: #004B88;
 }
@@ -10909,8 +10909,8 @@ input.tablesort-filter {
   color: #004B88;
 }
 .index-box__info > h3 {
-  margin: 0px;
-  margin: 0rem;
+  margin: 0px 0px 11.2px 0px;
+  margin: 0rem 0rem 0.7rem 0rem;
   font-size: 1rem;
   color: #191926;
 }
@@ -10926,15 +10926,15 @@ input.tablesort-filter {
 }
 .box > h2,
 .highlight-adviseronly > h2 {
-  margin: 0px;
-  margin: 0rem;
+  margin: 0px 0px 11.2px 0px;
+  margin: 0rem 0rem 0.7rem 0rem;
   font-size: 1.3rem;
   color: #004B88;
 }
 .box > h3,
 .highlight-adviseronly > h3 {
-  margin: 0px;
-  margin: 0rem;
+  margin: 0px 0px 11.2px 0px;
+  margin: 0rem 0rem 0.7rem 0rem;
   font-size: 1rem;
   color: #191926;
 }
@@ -11060,14 +11060,14 @@ input.tablesort-filter {
   width: 50%;
 }
 .box--content-right > h2 {
-  margin: 0px;
-  margin: 0rem;
+  margin: 0px 0px 11.2px 0px;
+  margin: 0rem 0rem 0.7rem 0rem;
   font-size: 1.3rem;
   color: #004B88;
 }
 .box--content-right > h3 {
-  margin: 0px;
-  margin: 0rem;
+  margin: 0px 0px 11.2px 0px;
+  margin: 0rem 0rem 0.7rem 0rem;
   font-size: 1rem;
   color: #191926;
 }
@@ -11134,8 +11134,8 @@ input.tablesort-filter {
   margin-bottom: 24px;
   margin-bottom: 1.5rem;
   margin: 0;
-  margin: 0px;
-  margin: 0rem;
+  margin: 0px 0px 16px 0px;
+  margin: 0rem 0rem 1rem 0rem;
 }
 @media (max-width: 599px) {
   .side-nav-beta {
@@ -12642,8 +12642,8 @@ html[data-useragent*='Mobi'] .a-social-whatsapp {
 }
 .overlay__footer .left {
   float: left;
-  margin: 8px;
-  margin: 0.5rem;
+  margin: 8px 8px 8px 0px;
+  margin: 0.5rem 0.5rem 0.5rem 0rem;
 }
 span[id*="overlay_button"] {
   cursor: help;
